Project SmartFactory_MVP_04_Physical_Inventory {
  database_type: 'PostgreSQL'
  Note: '''
  현재 상태/재고/예약만 보는 그림.
  Main Scheduler가 작업 가능 여부를 판단할 때 가장 먼저 보는 영역이다.
  '''
}

Table robots {
  id text [pk, note: 'tb3_1/tb3_2']
  domain_id integer [not null, note: 'ROS_DOMAIN_ID']
  status text [not null, note: 'IDLE/RESERVED/MOVING/DOCKING/LIFTING/PAUSED/ERROR/OFFLINE/CHARGING']
  battery_level float8
  location_id text [ref: > locations.id]
  active_task_id bigint [ref: > tasks.id]
  last_seen_at timestamptz
}

Table locations {
  id text [pk, note: 'INBOUND_01/STORAGE_A_01/OUTBOUND_01/CHARGE_01']
  type text [not null, note: 'AREA/WAYPOINT/SLOT/CHARGE']
  status text [not null, note: 'AVAILABLE/RESERVED/OCCUPIED/BLOCKED/UNKNOWN']
  parent_id text [ref: > locations.id]
  approach_id text [ref: > locations.id, note: '정밀주차 전 접근 waypoint']
  x float8
  y float8
  yaw float8
  marker_id integer [note: 'ArUco marker id']
}

Table items {
  id text [pk, note: '품목 식별값. MVP에서는 id 하나만 사용']
}

Table inventory {
  item_id text [not null, ref: > items.id]
  location_id text [not null, ref: > locations.id]
  quantity integer [not null, default: 0]
  updated_at timestamptz

  indexes {
    (item_id, location_id) [pk]
  }
}

Table reservations {
  id bigint [pk]
  type text [not null, note: 'ROBOT/LOCATION/ITEM']
  status text [not null, note: 'ACTIVE/RELEASED/EXPIRED/CANCELLED']
  task_id bigint [not null, ref: > tasks.id]
  robot_id text [ref: > robots.id]
  location_id text [ref: > locations.id]
  item_id text [ref: > items.id]
  expires_at timestamptz
  released_at timestamptz
}

Table tasks {
  id bigint [pk]
  task_type text [not null, note: 'INBOUND/OUTBOUND/MOVE/RECOVERY/CHARGING']
  status text [not null]
}
